--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Spotify - Web Player</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="utility.css" />
     <link
@@ -127,6 +127,19 @@
            <!--  -->
             
             
+          </div>
+          <div class="playbar">
+            <div class="songinfo">
+
+            </div>
+            <div class="songbuttons">
+              <img src="assets/prevsong.svg" alt="">
+              <img src="assets/play.svg" alt="">
+              <img src="assets/nextsong.svg" alt="">
+            </div>
+            <div class="songtime">
+
+            </div>
           </div>
         </div>
       </div>
