--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 
               </div>
-                <img src="songs/cs/cover.jpg" alt="" />
+                <img src="assets/cover_1.jpg" alt="" />
                 <i class="hgi hgi-stroke hgi-play play-button"></i>
                 <h2>Happy Hits !</h2>
                 <p>Hits to boost your mood and fill it with Happiness</p>
