--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
             <img src="assets/playlist.svg" class="invert" alt="" />
             <h2>Your Library</h2>
           </div>
+          <div class="songList">
+            <ul>
+              <li>
+                <img src="/assets/music.svg" class="invert" alt="">
+                <div class="info">
+                  <div>Song Name</div>
+                  <div>Song Artist</div>
+                </div>
+                <div class="playnow">
+                  <span>Play Now</span>
+                  <img src="assets/play.svg" class="invert" alt="">
+                </div>
+              </li>
+            </ul>
+          </div>
           <div class="footer">
             <div>
               <a href="https://www.spotify.com/jp/legal/"><span>Legal</span></a>
